# mta-ployglot-server

./: .agent.json  .agent.md  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .prettierignore  Checklist.md  Dockerfile.fastapi  Dockerfile.fastify  Makefile  Makefile.clean  Makefile.compose  Makefile.devmode  Makefile.docker  Makefile.entries  Makefile.gates  Makefile.git  Makefile.lang.go  Makefile.lang.node  Makefile.lang.python  Makefile.lang.python.uv  Makefile.lang.rust  Makefile.orchestrator  Makefile.poetry  Makefile.prod  Makefile.projections  Makefile.servers-ci  Makefile.smoke  Makefile.subtree  Makefile.symlinks  Makefile.vars  Makefile.workspace  README.md  SSOT.md  docker-compose.yml  uv.toml  workspace.toml
.agents/: build-matrix.md  parity.md
.bin/: check-no-hardcoded-registry.sh  check-python-pins.py  fix-pnpm-build-forwarding.py  fix-pyproject-license.py  list-poetry-packages.sh  pnpm-add-local-packages.sh  pyproject-export-requirements.py  python-pins.toml  ts-nocheck-add.py
docs/: release-assemble-setup.md  setup-branch.md  vault-check-expectations.md
ployglots/: mta-ployglot-pkg-vault  (+12 more)
ployglots/mta-ployglot-api-aws-s3/: .Agent.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
ployglots/mta-ployglot-api-aws-s3/examples/: README.md
ployglots/mta-ployglot-api-aws-s3/examples/sdk/: 01-direct-https.md  02-https-via-proxy.md  03-custom-endpoint.md  04-verify-connectivity.md  README.md
ployglots/mta-ployglot-pkg-fetch-client/: .agent.json  .agent.md  .gitignore  README.md  package.json  pyproject.toml
ployglots/mta-ployglot-pkg-fetch-client/.agents/: build-matrix.md  parity.md
ployglots/mta-ployglot-pkg-fetch-client/.github/workflows/: ci.yml
ployglots/mta-ployglot-server-print-routes/examples/fastapi-app/: main.py  pyproject.toml
server/fastapi/: .agent.md  .dockerignore  Dockerfile  Makefile  Makefile.ci  Makefile.introspect-ci  main.py  pyproject.toml
server/fastapi/config/app-yaml/: base.yml
server/fastapi/config/lifecycles/: 15_env_resolve.lifecycle.py  20_fetch_clients.lifecycle.py  24_compute_functions.lifecycle.py  25_app_yaml_loader.lifecycle.py  26_runtime_template_resolver.lifecycle.py  27_app_yaml_config.lifecycle.py  28_app_yaml_from_context.lifecycle.py  29_app_yaml_fetch_config.lifecycle.py  _app_yaml_config.py  _app_yaml_fetch_config.py  _app_yaml_from_context.py  _app_yaml_loader.py  _env_resolve.py  _fetch_factories.py  _fetch_registry.py  _runtime_template_resolver.py  _shared_fetch.py
server/fastapi/config/routes/: 10_healthz.routes.py  30_confluence.routes.py  30_figma.routes.py  30_github.routes.py  30_jira.routes.py  30_saucelabs.routes.py  30_statsig.routes.py  35_healthz_app_yaml.routes.py  36_endpoints_refresh.routes.py  37_healthz_app_yaml_file.routes.py  38_healthz_app_yaml_file_dynamic.routes.py  39_healthz_app_yaml_stages.routes.py  99_wildcard.routes.py  _app_yaml_filename_guard.py  _di.py  _provider_config_echo.py
server/fastapi/tests/: test_di_missing_registry.py  test_di_override.py
server/fastapi/tests/integrations/: _mock_origin.py  conftest.py  test_app_yaml_compose.py  test_app_yaml_file_dynamic.py  test_app_yaml_stages.py  test_integration_config_echo.py  test_integrations_smoke.py  test_orphan_yaml_pipeline.py
server/fastapi/tests/unit/: test_app_yaml_filename_guard.py  test_fetch_factory_parity.py  test_provider_config_echo_build.py  test_provider_config_echo_mask.py
(+420 files in other folders)
